fixing title spacing results page

--- a/assets/style.css
+++ b/assets/style.css
@@ -387,8 +387,8 @@ select:focus {
 .title-with-bg{
     color: white;
     max-width: 500px;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     padding: 0.5rem;
     border-radius: 1rem;
     background-color: rgba(1, 22, 30, 0.6);
